--- a/css/styles.css
+++ b/css/styles.css
@@ -11048,7 +11048,7 @@ textarea.form-control-lg {
   content: "";
   position: absolute;
   width: 6px;
-  background-color: #939597;
+  background-image: linear-gradient(to bottom, #6854A4, #F85C64);
   top: 0;
   bottom: 0;
   left: 50%;
@@ -11069,8 +11069,8 @@ textarea.form-control-lg {
   width: 25px;
   height: 25px;
   right: -13px;
-  background-color: #939597;
-  border: 5px solid #f5df4d;
+  background-image: linear-gradient(to right, #6854A4, #F85C64);
+  border: 5px solid linear-gradient(to right, #6854A4, #F85C64);
   top: 15px;
   border-radius: 50%;
   z-index: 1;
@@ -11153,4 +11153,36 @@ textarea.form-control-lg {
   .right {
     left: 0%;
   }
+}
+
+/* Stijlen voor de animatie */
+.animated-text {
+  display: inline-block;
+  animation: highlight 3s infinite alternate; /* Je kunt de tijdsduur en het type van de animatie aanpassen */
+  position: relative;
+}
+
+.animated-text::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #FFD700; 
+  bottom: 0;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.5s;
+}
+
+.animated-text:hover::after {
+  transform: scaleX(1); /* Streepje zichtbaar maken tijdens de hover (kan worden aangepast naar wens) */
+}
+
+
+/* Definitie van de animatie */
+@keyframes highlight {
+  0% { color: #FFFFFF; } /* Begin met de gewone kleur (wit in dit geval) */
+  50% { color: #FFD700; } /* Ga naar een andere kleur (rood in dit geval) op 50% van de animatie */
+  100% { color: #FFFFFF; } /* Eindig terug met de gewone kleur */
 }
